<resources>
    <string name="app_name">RestaurantHygieneChecker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="local_search">Local Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="no_results">No results found...</string>
    <string name="no_authority">No authority was selected... Please select authority and try again.</string>
    <string name="not_enabled">"GPS is not enabled"</string>
    <string name="close">Close</string>
    <string name="hint">Radius</string>
    <string name="sort_by">Sort By:</string>
    <string name="failed_query">Fetching data failed... Please try again.</string>
    <string name="hygiene">Hygiene</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="business_name">Business Name</string>
    <string name="business_type">Type of Business</string>
    <string name="hygiene_rating">Hygiene Rating (from)</string>
    <string name="checkbox">Use Current Location</string>
    <string name="region">Region</string>
    <string name="authority">Authority</string>
    <string name="address">Address</string>
    <string name="auth_email">Authority Email</string>
    <string name="network_off">No internet connection... Please turn on the internet and try again.</string>
    <string name="no_permission">Without permissions the functionality of the application will be limited.</string>
    <string name="no_gps">Your GPS is turned off or you did not grant the Location permissions for the application.</string>


    <string-array name="ratings">
        <!--<item>Radius</item>-->
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="radius">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_map">MainMapActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
