<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="270dp"
    android:layout_height="200dp"
    android:background="@drawable/pop_up_draw"
    android:focusableInTouchMode="true"
    android:theme="@android:style/ThemeOverlay.Material.Light"
    tools:context="com.example.jokubas.restauranthygienechecker.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView2"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fields"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/advanced_draw"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1.1"
                    android:text="@string/business_name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutCountry"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/advanced_draw"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.1"
                    android:elegantTextHeight="true"
                    android:text="@string/business_type"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/advanced_draw"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.1"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/advanced_draw"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.1"
                    android:text="@string/authority"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/authority"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/advanced_draw"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.1"
                    android:text="@string/auth_email"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/authority_email"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/rating"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1.5"
        android:src="@drawable/score_5"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
